[OVT-2853] fixed surefire config